--- a/style.css
+++ b/style.css
@@ -19,12 +19,17 @@ body header {
   z-index: 200;
 }
 
+body header .navigation {
+  z-index: 200;
+  position: fixed;
+}
+
 body header .navigation .logo {
   font-size: 30px;
   text-align: left;
   padding: 10px;
   background-color: #ffffff;
-  border-bottom: 2px solid #E86C00;
+  border-bottom: 2px solid #533011;
   color: #3211c2;
   position: fixed;
   top: 0px;
@@ -52,7 +57,7 @@ body header .navigation nav ul {
   height: 180px;
   padding: 0;
   margin: 0;
-  padding-bottom: #E86C00;
+  padding-bottom: #533011;
   display: none;
 }
 
@@ -68,7 +73,7 @@ body header .header_img {
 }
 
 body .section1 {
-  background-color: #E86C00;
+  background-color: #533011;
 }
 
 body .section1 div {
@@ -100,7 +105,7 @@ body .section2 {
 }
 
 body .section2 button {
-  background-color: #E86C00;
+  background-color: #533011;
   color: #ffffff;
   padding: 8px;
   border: none;
@@ -221,6 +226,13 @@ body .section6 form input[type=submit] {
   margin: 1em 0;
 }
 
+body .section6 form input[type=file] {
+  width: 100%;
+  background-color: #ffffff;
+  padding: 10px 8px;
+  margin: 1em 0;
+}
+
 body .section7 {
   padding: 1em;
 }
@@ -280,7 +292,8 @@ body .section9 {
 
 body .section9 i {
   color: #E77817;
-  width: 15%;
+  width: 10%;
+  margin: 0;
 }
 
 body .section9 li {
@@ -339,5 +352,235 @@ body .section9 .sec9_box3 .social i {
 body footer {
   text-align: center;
   padding: 3em 1em;
+}
+
+@media (min-width: 750px) {
+  body {
+    font-size: 16px;
+  }
+  body header {
+    background-color: #ffffff;
+    z-index: 200;
+  }
+  body header .navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: fixed;
+    width: 100%;
+    background-color: #ffffff;
+    z-index: 200;
+  }
+  body header .navigation .logo {
+    font-size: 60px;
+    padding: 10px;
+    border-bottom: none;
+    position: static;
+    width: 30%;
+  }
+  body header .navigation nav {
+    width: 100%;
+  }
+  body header .navigation nav .fa {
+    display: none;
+  }
+  body header .navigation nav ul {
+    position: static;
+    background-color: #ffffff;
+    color: #5A3642;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    height: initial;
+  }
+  body header .navigation nav ul li a {
+    border: none;
+    display: block;
+    font-size: 1.5em;
+    margin: 0.5em;
+  }
+  body header .header_img {
+    width: 100%;
+  }
+  body .section1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    padding: 1em 0;
+  }
+  body .section1 div i {
+    font-size: 30px;
+  }
+  body .section2 {
+    padding: 2em 4em;
+    text-align: center;
+  }
+  body .section3 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 2em;
+    background-color: #533011;
+    color: #ffffff;
+  }
+  body .section3 .sec3_img {
+    width: 25%;
+    height: 100%;
+  }
+  body .section3 .sec3_img .offer {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    color: #ffffff;
+  }
+  body .section3 .sec3_text {
+    padding: 0 3em;
+  }
+  body .section4 {
+    padding: 2em 4em;
+    text-align: center;
+  }
+  body .section5 {
+    padding: 2em;
+  }
+  body .section5 .sec5_box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  body .section5 .sec5_box i {
+    font-size: 60px;
+    width: 95px;
+    padding: 8px 10px;
+  }
+  body .section6 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    padding: 2em;
+  }
+  body .section6 .sec6_texts {
+    width: 50%;
+    font-size: 1.6em;
+  }
+  body .section6 form {
+    width: 50%;
+    padding: 2em;
+  }
+  body .section6 form .input_wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: 100%;
+  }
+  body .section6 form .input_wrapper div {
+    width: 100%;
+  }
+  body .section6 form .input_wrapper input {
+    width: 98%;
+  }
+  body .section6 form input[type=submit] {
+    margin: 1em 0;
+  }
+  body .section7 {
+    padding: 1em;
+  }
+  body .section7 ul {
+    padding: 0 1.7em;
+  }
+  body .section7 ul li {
+    margin: 0.5em;
+  }
+  body .section8 h2 {
+    padding: 0 1em;
+    text-align: center;
+    font-size: 2em;
+  }
+  body .section8 .sec8_box_wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    padding: 1em 4em;
+  }
+  body .section9 {
+    padding: 3em 1em;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  body .section9 li {
+    list-style-type: none;
+    margin: 1.2em 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  body .section9 span {
+    -ms-grid-column-align: left;
+        justify-self: left;
+    width: 90%;
+  }
+  body .section9 .sec9_box1 {
+    width: 30%;
+  }
+  body footer {
+    text-align: center;
+    padding: 3em 1em;
+  }
 }
 /*# sourceMappingURL=style.css.map */
