--- a/style.scss
+++ b/style.scss
@@ -5,7 +5,7 @@ img{
   width: 100%;
 }
 
-$brown : #E86C00;
+$brown : #533011;
 
 body{
   font-size: 16px;
@@ -16,7 +16,8 @@ body{
     background-color: #ffffff;
     z-index: 200;
     .navigation{
-      
+      z-index: 200;
+      position: fixed;
       .logo{
         font-size: 30px;
         text-align: left;
@@ -144,9 +145,6 @@ body{
     background-color: #563E50;
     color: #ffffff;
     padding: 1em;
-    .sec6_texts{
-
-    }
     form{
       padding: 1em;
       background-color: rgba(255, 255, 255,0.2);
@@ -167,6 +165,12 @@ body{
         background-color:#002147;
         color: #ffffff;
         border: 2px solid #ffffff;
+        margin: 1em 0;
+      }
+      input[type=file]{
+        width: 100%;
+        background-color: #ffffff;
+        padding: 10px 8px;
         margin: 1em 0;
       }
     }
@@ -202,7 +206,6 @@ body{
         color: #ffffff;
       }
       .blue{
-    //    background-color: #2C184D;
     background: rgb(34,193,195);
 background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(160,45,253,0.3311369225424545) 100%);
       }
@@ -218,13 +221,15 @@ background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(160,45,253,0.33113
     padding: 1em;
     i{
       color: #E77817;
-      width: 15%;
+      width: 10%;
+      margin: 0;
     }
     li{
       list-style-type: none;
       margin: 1.5em 0;
       display: flex;
       justify-content: space-between;
+
     }
     span{
       justify-self: left;
@@ -264,6 +269,191 @@ background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(160,45,253,0.33113
   footer{
     text-align: center;
     padding: 3em 1em;
+  }
+
+}
+
+// media query for larger screen
+@media(min-width: 750px){
+  body{
+    font-size: 16px;
+    header{
+      background-color: #ffffff;
+      z-index: 200;
+      .navigation{  
+        display: flex;
+        justify-content: space-between; 
+        align-items: center;
+        position: fixed;
+        width: 100%;
+        background-color: #ffffff;
+        z-index: 200;
+        .logo{
+          font-size: 60px;
+          padding: 10px;
+          border-bottom: none;
+          position: static;
+          width: 30%;
+          
+        }
+        nav{
+          width: 100%;
+          .fa{
+            display: none;
+          }
+          ul{
+            position: static;
+            background-color: #ffffff;
+            color: #5A3642;
+            display: flex;
+            justify-content: flex-end;
+            height: initial;
+            li{
+              a{
+                border: none;
+                display: block;
+                font-size: 1.5em;
+                margin: 0.5em;
+              }
+            }
+          }
+        }
+      }
+      .header_img{
+        width: 100%;
+      }
+    }
+    .section1{
+      display: flex;
+      justify-content: space-evenly;
+      padding: 1em 0;
+      div{
+        i{
+          font-size: 30px;
+        }
+      }
+    }
+    .section2{
+      padding: 2em 4em ;
+      text-align: center;
+    }
+    .section3{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center;
+      padding: 2em;
+      background-color: $brown;
+      color: #ffffff;
+      
+      .sec3_img{
+        width: 25%;
+        height: 100%;
+      .offer{
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0,0.4);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #ffffff;
+      }
+      }
+      .sec3_text{
+        padding: 0 3em;
+      }
+      
+    }
+    .section4{
+      padding: 2em 4em;
+      text-align: center;
+    }
+    .section5{
+      padding: 2em;
+      .sec5_box{
+        display: flex;
+        flex-direction: row;
+        i{
+          font-size: 60px;
+          width: 95px;
+          padding: 8px 10px;
+        }
+      }
+    }
+    .section6{
+      display: flex;
+      flex-direction: row;
+      padding: 2em;
+      .sec6_texts{
+        width: 50%;
+        font-size: 1.6em;
+      }
+      form{
+        width: 50%;
+        padding: 2em;
+        .input_wrapper{
+          display: flex;
+          flex-direction: row;
+          width: 100%;
+          div{
+            width: 100%;
+          }
+          input{
+            width: 98%;
+          }
+        }
+        input[type=submit]{
+          margin: 1em 0;
+        }
+      }
+    }
+    .section7{
+      padding: 1em;
+      ul{
+        padding: 0 1.7em;
+        li{
+          margin: 0.5em;
+        }
+      }
+    }
+    .section8{
+      h2{
+        padding: 0 1em;
+        text-align: center;
+        font-size: 2em;
+      }
+      .sec8_box_wrapper{
+        display: flex;
+        flex-direction: row;
+        padding: 1em 4em;
+      }
+      
+    }
+    .section9{
+      padding: 3em 1em;
+      display: flex;
+      justify-content: space-evenly;
+      li{
+        list-style-type: none;
+        margin: 1.2em 0;
+        display: flex;
+        justify-content: space-between;
+      }
+      span{
+        justify-self: left;
+        width: 90%;
+      }
+      .sec9_box1{
+        width: 30%;
+      }
+    }
+    footer{
+      text-align: center;
+      padding: 3em 1em;
+    }
+  
   }
 
 }
